--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,316 @@
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap');
+
+:root,
+
+// default theme
+html[data-theme='default'] {
+    --bg-main: hsl(222, 26%, 31%);
+    --bg-keypad: hsl(223, 31%, 20%);
+    --bg-screen: hsl(224, 36%, 15%);
+    --accent-key: hsl(225, 21%, 49%);
+    --accent-key-shadow: hsl(224, 28%, 35%);
+    --equals-key: hsl(6, 63%, 50%);
+    --equals-key-shadow: hsl(6, 70%, 34%);
+    --equals-text: white;
+    --key: hsl(30, 25%, 89%);
+    --key-shadow: hsl(28, 16%, 65%);
+    --text: hsl(221, 14%, 31%);
+    --attr-text: white;
+    --header-text: white;
+    --num-size: 32px;
+    --bor-rad: 10px;
+}
+// light theme
+html[data-theme='light'] {
+    --bg-main: hsl(0, 0%, 90%);
+    --bg-keypad: hsl(0, 5%, 81%);
+    --bg-screen: hsl(0, 0%, 93%);
+    --accent-key: hsl(185, 42%, 37%);
+    --accent-key-shadow: hsl(185, 58%, 25%);
+    --equals-key: hsl(25, 98%, 40%);
+    --equals-key-shadow: hsl(25, 99%, 27%);
+    --key: hsl(45, 7%, 89%);
+    --key-shadow: hsl(35, 11%, 61%);
+    --text: hsl(60, 10%, 19%);
+    --attr-text: hsl(60, 10%, 19%);
+    --header-text: hsl(60, 10%, 19%);
+}
+
+// dark theme
+html[data-theme='dark'] {
+    --bg-main: hsl(268, 75%, 9%);
+    --bg-keypad: hsl(268, 71%, 12%);
+    --bg-screen: hsl(268, 71%, 12%);
+    --accent-key: hsl(281, 89%, 26%);
+    --accent-key-shadow: hsl(285, 91%, 52%);
+    --equals-key: hsl(176, 100%, 44%);
+    --equals-key-shadow: hsl(177, 92%, 70%);
+    --equals-text: hsl(198, 20%, 13%);
+    --key: hsl(268, 47%, 21%);
+    --key-shadow: hsl(290, 70%, 36%);
+    --text: hsl(52, 100%, 62%);
+    --attr-text: hsl(52, 100%, 62%);
+    --header-text: hsl(52, 100%, 62%);
+}
+
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
+button {
+    cursor: pointer;
+    outline: none;
+    border: none;
+
+    font-family: 'Spartan', sans-serif;
+    font-size: var(--num-size);
 }
 
 body {
-    font-size: 15px;
+    background-color: var(--bg-main);
+}
+
+.calculator {
+    background-color: var(--bg-main);
+    font-family: 'Spartan', sans-serif;
+    margin-left: 25px;
+
+    @media only screen and (min-width: 600px) {
+        max-width: 540px;
+        margin: 96px auto auto;
+    }
+
+    .header {
+        max-width: 327px;
+        display: flex;
+        margin-top: 50px;
+        justify-content: space-between;
+        padding-bottom: 1.5rem;
+
+        @media only screen and (min-width: 600px) {
+            max-width: 540px;
+        }
+
+        .title {
+            color: var(--header-text);
+            font-size: 32px;
+        }
+
+        .themes {
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            margin-top: -10px;
+            color: var(--header-text);
+
+            p {
+                font-size: 0.75rem;
+                margin-bottom: 5px;
+                font-weight: 700;
+                letter-spacing: 1px;
+                margin-right: 1rem;
+                color: var(--header-text);
+            }
+        }
+        .theme-toggle {
+            display: block;
+
+            .theme-numbers {
+                display: flex;
+                justify-content: space-around;
+                margin-bottom: 5px;
+
+                .theme-number {
+                    padding: 0 0.5rem;
+                }
+            }
+        }
+        .toggle-window {
+            background-color: var(--bg-keypad);
+            border-radius: 16px;
+            display: flex;
+            height: 1.5rem;
+            overflow: hidden;
+            width: 100%;
+
+            .theme {
+                background-color: var(--equals-key);
+                border: none;
+                border-radius: 50%;
+                display: block;
+                height: 1rem;
+                width: 1rem;
+                margin: 5px;
+
+                #default {
+                    background-color: var(--equals-key);
+                }
+
+                #light {
+                    background-color: inherit;
+                }
+
+                #dark {
+                    background-color: inherit;
+                }
+            }
+        }
+    }
+
+    // Display
+
+    .output {
+        background-color: var(--bg-screen);
+        border-radius: var(--bor-rad);
+        font-size: var(--num-size);
+        color: var(--attr-text);
+        margin-bottom: 1.5rem;
+        height: 88px;
+        text-align: right;
+        max-width: 327px;
+        word-wrap: break-word;
+        word-break: break-all;
+
+        @media only screen and (min-width: 600px) {
+            max-width: 540px;
+        }
+
+        .previous-operand {
+            color: var(--attr-text);
+            font-size: 20px;
+        }
+
+        .current-operand {
+            color: var(--attr-text);
+            font-size: 32px;
+            font-weight: 700;
+            padding-top: 20px;
+            padding-right: 10px;
+
+            @media only screen and (min-width: 600px) {
+                font-size: 48px;
+            }
+        }
+    }
+
+    // Buttons
+
+    .keypad {
+        background-color: var(--bg-keypad);
+        border-radius: var(--bor-rad);
+        display: grid;
+        grid-gap: 12px;
+        font-size: var(--num-size);
+        grid-template: repeat(5, 1fr) / repeat(4, 1fr);
+        grid-auto-flow: row;
+        padding: 1.5rem;
+        max-width: 327px;
+
+        @media only screen and (min-width: 600px) {
+            max-width: 540px;
+            grid-gap: 24px;
+        }
+
+        .operator {
+            background-color: var(--key);
+            box-shadow: 0 5px var(--key-shadow);
+            color: var(--text);
+            border-radius: var(--bor-rad);
+            text-align: center;
+            min-width: 60px;
+            min-height: 64px;
+
+            &:focus {
+                box-shadow: none;
+                transform: translateY(3.5px);
+            }
+
+            &:hover {
+                cursor: pointer;
+                box-shadow: none;
+                transform: translateY(3.5px);
+            }
+        }
+        .key {
+            border-radius: var(--bor-rad);
+            min-width: 60px;
+            min-height: 64px;
+            box-shadow: 0 5px var(--key-shadow);
+            color: var(--text);
+            background-color: var(--key);
+
+            &:focus {
+                box-shadow: none;
+                transform: translateY(3.5px);
+            }
+
+            &:hover {
+                cursor: pointer;
+                background: var(--key-shadow);
+                box-shadow: none;
+                transform: translateY(3.5px);
+            }
+        }
+
+        #del {
+            border-radius: var(--bor-rad);
+            background-color: var(--accent-key);
+            box-shadow: 0 5px var(--accent-key-shadow);
+            color: white;
+            font-size: 1rem;
+            min-width: 60px;
+            min-height: 64px;
+
+            &:focus {
+                box-shadow: none;
+            }
+
+            &:hover {
+                cursor: pointer;
+                background: var(--key-shadow);
+                box-shadow: none;
+            }
+        }
+
+        #reset-key {
+            border-radius: var(--bor-rad);
+            background-color: var(--accent-key);
+            box-shadow: 0 5px var(--accent-key-shadow);
+            color: white;
+            font-size: 1rem;
+            grid-column: 1 / span 2;
+
+            &:focus {
+                cursor: pointer;
+                box-shadow: none;
+            }
+
+            &:hover {
+                cursor: pointer;
+                box-shadow: none;
+                background: var(--key-shadow);
+            }
+        }
+
+        #equals-key {
+            border-radius: var(--bor-rad);
+            background-color: var(--equals-key);
+            box-shadow: 0 5px var(--equals-key-shadow);
+            color: var(--equals-text);
+            font-size: 1rem;
+            grid-column: 3 / span 2;
+
+            &:focus {
+                cursor: pointer;
+                box-shadow: none;
+            }
+
+            &:hover {
+                cursor: pointer;
+                box-shadow: none;
+                background: var(--equals-key-shadow);
+            }
+        }
+    }
 }
